# gbs_energy_etl

./: .gitignore  Makefile  README.md  STEPS.md  main_connector.py  pyproject.toml  requirements.txt  setup.cfg
gbs_energy_etl/: aws_template.cfg  clean_emissions.py  clean_energy.py  clean_temperature.py  create_tables.py  etl.py  main_connector.py  pyproject.toml  settings.py  sql_queries.py
metadata/: CW_HistoricalEmissions_metadata.csv  CW_HistoricalEmissions_metadata.html  owid-energy-codebook.html
tests/: test_emissions.py  test_energy.py  test_temperature.py
