[build-system]
requires =["setuptools>=54", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbs_energy_etl"
version = "1.0"
description = "This into dimensional model in Amazon Redshift."
readme = "README.md"
requiers-python = "3.9.6"
dependencies = [
    "psycopg2 == 2.9.3"

]

[project.scripts]
etl = "gbs_energy_etl.etl.py"
main_connector = "gbs_energy_etl.main_connector.py"
settings = "gbs_energy_etl.settings.py" 
sql_queries = "gbs_energy_etl.sql_queries.py"