[metadata]
name = gbs_energy_etl
version = 1.0
author = Bartosz Rybka
author_email = bartek@getbettersoon.de
description = This pipeline takes three datasets and transforms them into dimensional model in Amazon Redshift.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getbettersoon/gbs_energy_etl

[options]
packages = find:
python_requires = >=3.9.6